# Kettle-Project

./: Cargo.toml  Embed.toml  LPC1100 Series.yaml  LPC1100_Series.yaml  README.md  rust-toolchain.toml
.cargo/: config.toml
kettle/: Cargo.toml  build.rs
kettle/.cargo/: config.toml
kettle/linker/: memory.x
kettle/src/: main.rs
lpc-usbd-rom/: Cargo.toml
lpc-usbd-rom/src/: bindings.rs  lib.rs
lpc-usbd-rom/usbd/: usbd_cdcuser.h  usbd_core.h  usbd_dfuuser.h  usbd_hiduser.h  usbd_mscuser.h
lpc11uxx/: CMSIS-SVD.xsd  Cargo.toml  build.sh  lpc11uxx.svd
lpc11uxx-hal/: Cargo.toml
lpc11uxx-hal/src/: constants.rs  intrinsics.rs  lib.rs  pll_calculator.rs  rom_data.rs  syscon.rs
lpc11uxx-hal/src/rom/: mod.rs  power.rs
lpc11uxx-hal/src/rom_data/: mod.rs
lpc11uxx/src/: adc.rs  ct16b0.rs  ct16b1.rs  ct32b0.rs  ct32b1.rs  flashctrl.rs  generic.rs  gpio_group_int0.rs  gpio_pin_int.rs  gpio_port.rs  i2c.rs  iocon.rs  lib.rs  pmu.rs  ssp0.rs  syscon.rs  usart.rs  usb.rs  wwdt.rs
lpc11uxx/src/adc/: cr.rs  dr.rs  gdr.rs  inten.rs  stat.rs
lpc11uxx/src/ct16b0/: ccr.rs  cr0.rs  cr1.rs  ctcr.rs  pc.rs  pr.rs
lpc11uxx/src/ct16b1/: ccr.rs  cr1.rs  ctcr.rs  emr.rs  mr.rs  pwmc.rs  tc.rs
lpc11uxx/src/ct32b0/: ccr.rs  cr0.rs  cr1.rs  ctcr.rs  emr.rs  ir.rs  mr.rs  pc.rs  pr.rs  pwmc.rs  tc.rs
lpc11uxx/src/ct32b1/: ccr.rs  cr1.rs  ctcr.rs  ir.rs  mcr.rs  tcr.rs
lpc11uxx/src/flashctrl/: eemssig.rs  eemsstart.rs  eemsstop.rs  flashcfg.rs  fmsstart.rs  fmsstop.rs  fmstat.rs  fmstatclr.rs  fmsw0.rs  fmsw1.rs  fmsw2.rs  fmsw3.rs
lpc11uxx/src/gpio_group_int0/: ctrl.rs  port_ena.rs  port_pol.rs
lpc11uxx/src/gpio_pin_int/: cienf.rs  cienr.rs  fall.rs  ienf.rs  ienr.rs  isel.rs  ist.rs  rise.rs  sienf.rs  sienr.rs
lpc11uxx/src/gpio_port/: b0.rs  b1.rs  clr.rs  dir.rs  mask.rs  mpin.rs  not.rs  pin.rs  set.rs  w_0.rs  w_1.rs
lpc11uxx/src/i2c/: adr.rs  conclr.rs  conset.rs  dat.rs  data_buffer.rs  mask.rs  mmctrl.rs  sclh.rs  scll.rs  stat.rs
lpc11uxx/src/iocon/: pio0_1.rs  pio0_16.rs  pio0_17.rs  pio0_18.rs  pio0_19.rs  pio0_2.rs  pio0_20.rs  pio0_21.rs  pio0_22.rs  pio0_23.rs  pio0_3.rs  pio0_4.rs  pio0_5.rs  pio0_6.rs  pio0_7.rs  pio0_8.rs  pio0_9.rs  pio1_0.rs  pio1_1.rs  pio1_10.rs  pio1_11.rs  pio1_12.rs  pio1_13.rs  pio1_14.rs  pio1_15.rs  pio1_16.rs  pio1_17.rs  pio1_18.rs  pio1_19.rs  pio1_2.rs  pio1_20.rs  pio1_21.rs  pio1_22.rs  pio1_23.rs  pio1_24.rs  pio1_25.rs  pio1_26.rs  pio1_27.rs  pio1_28.rs  pio1_29.rs  (+15 more)
lpc11uxx/src/pmu/: gpreg.rs  gpreg4.rs  pcon.rs
lpc11uxx/src/ssp0/: cpsr.rs  cr0.rs  cr1.rs  dr.rs  icr.rs  imsc.rs  mis.rs  ris.rs  sr.rs
lpc11uxx/src/syscon/: bodctrl.rs  clkoutdiv.rs  clkoutsel.rs  clkoutuen.rs  device_id.rs  irqlatency.rs  mainclksel.rs  mainclkuen.rs  nmisrc.rs  pdawakecfg.rs  pdruncfg.rs  pdsleepcfg.rs  pintsel.rs  pioporcap0.rs  pioporcap1.rs  presetctrl.rs  ssp0clkdiv.rs  ssp1clkdiv.rs  starterp0.rs  starterp1.rs  sysahbclkctrl.rs  sysahbclkdiv.rs  sysmemremap.rs  sysoscctrl.rs  syspllclksel.rs  syspllclkuen.rs  syspllctrl.rs  syspllstat.rs  sysrststat.rs  systckcal.rs  uartclkdiv.rs  usbclkctrl.rs  usbclkdiv.rs  usbclksel.rs  usbclkst.rs  usbclkuen.rs  usbpllclksel.rs  usbpllclkuen.rs  usbpllctrl.rs  usbpllstat.rs  (+1 more)
lpc11uxx/src/usart/: acr.rs  dll.rs  dlm.rs  fcr.rs  fdr.rs  hden.rs  icr.rs  ier.rs  iir.rs  lcr.rs  lsr.rs  mcr.rs  msr.rs  osr.rs  rbr.rs  rs485adrmatch.rs  rs485ctrl.rs  rs485dly.rs  scictrl.rs  scr.rs  syncctrl.rs  ter.rs  thr.rs
lpc11uxx/src/usb/: databufstart.rs  devcmdstat.rs  epbufcfg.rs  epinuse.rs  epliststart.rs  epskip.rs  eptoggle.rs  info.rs  inten.rs  introuting.rs  intsetstat.rs  intstat.rs  lpm.rs
lpc11uxx/src/wwdt/: clksel.rs  feed.rs  mod_.rs  tc.rs  tv.rs  warnint.rs  window.rs
mpu6500/: Cargo.toml
pinnacle/: Cargo.toml
steam-controller-bsp/: Cargo.toml  NOTES.md
swd-bitbang/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
