[package]
name = "kettle"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[[bin]]
name = "kettle"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lpc11uxx-hal = { version = "0.0.0", path = "../lpc11uxx-hal", features = ["sram1"] }
defmt-rtt = "0.4.0"
defmt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rt = "0.6.15"