[package]
name = "lpc11uxx"
version = "0.5.0"
authors = ["MasterR3C0RD <masterr3c0rd@epochal.quest"]
edition = "2021"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.6.13", optional = true }
vcell = "0.1.2"
derive_more = { version = "0.99.17", default_features = false, features = ["from", "deref", "deref_mut"] }
portable-atomic = { version = "1", default-features = false }

[features]
default = ["all-groups"]
rt = ["cortex-m-rt/device"]
adc = []
ct16 = []
ct32 = []
flashctrl = []
gpio_group_int = []
gpio_pin_int = []
gpio_port = []
i2c = []
iocon = []
pmu = []
ssp = []
syscon = []
usart = []
usb = []
wwdt = []
all-groups = ["adc","ct16","ct32","flashctrl","gpio_group_int","gpio_pin_int","gpio_port","i2c","iocon","pmu","ssp","syscon","usart","usb","wwdt"]
